Fixed grid body sizing, removing gap appearing

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
     --content-cardBorderRadius: 1em;
     --content-cardShadow: 3px 5px 6px -2px rgba(0,0,0,0.27);
     --content-descriptionColor: rgb(112, 112, 112);
+    --content-cardHeight: 15em;
 
     --profilepic-width: 2.5em;
     --hover-color: #6B7280;
@@ -29,8 +30,10 @@
 body {
     display: grid;
     grid-template-columns: auto auto;
-    grid-template-rows: fit-content 1fr;
+    grid-template-rows: min-content 1fr;
     font-family: 'Roboto', sans-serif;
+    min-height: 100vh;
+    background-color: var(--content-background);
 }
 
 
@@ -203,6 +206,7 @@ body {
     box-shadow: 0px 11px 17px -14px rgba(0,0,0,0.96) inset;
     -webkit-box-shadow: 0px 11px 17px -14px rgba(0,0,0,0.96) inset;
     -moz-box-shadow: 0px 11px 17px -14px rgba(0,0,0,0.96) inset;
+    height: fit-content;
 }
 
 .projects-area {
@@ -214,8 +218,8 @@ body {
 .project-cards {
     flex-grow: 1;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
-    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(17em, 1fr));
+    grid-auto-rows: min-content;
     gap: var(--item-gap1);
 }
 
@@ -229,7 +233,7 @@ body {
     background-color: var(--header-background);
     padding: var(--item-gap1);
     border-radius: var(--content-cardBorderRadius);
-    max-height: 20em;
+    height: var(--content-cardHeight);
     display: flex;
     flex-direction: column;
     position: relative;
